* Added squash() operation.

* Allow bin() and sort() operations to be performed using a set of variables.

* harp_product_sort() now takes a list of variables.

* The python harp.import_product() function now uses the C library to perform
  the contactenation of products.

* Added post_operations argument to python harp.import_product() function.

* Besides using a polygon of >=3 vertices, a geospatial area can now also be
  defined via a bounding rect. Use e.g. 'latitude_bounds {time,2}' and
  'longitude_bounds {time,2}' to define the min/max of the bounding rect.

* Added derivation for tropospheric/stratospheric column from partial column
  profile and tropopause.

* Corrected derivation for calculating tropopause altitude/pressure.

* Added support for scene albedo/pressure/type variables.

* Fixed problem in matlab mex extension determination on linux when using the
  configure script.

* Fixed setting of default CODA definition path and udunits2 xml path for
  Python on Windows.

* Added format, variable count, and dimension sizes to harpcheck output.

* Added support for TCCON products in GEOMS format.

* Updates to AEOLUS L2A, ESACCI_OZONE_L2_TC, GEOMS FTIR, GOME2 L2, OMI L2 NO2,
  QA4ECV, and S5P L2 product ingestions.

* Updated embedded expat library to version 2.2.6.

1.5 2018-12-17
~~~~~~~~~~~~~~

* Fixed issue where vertical smoothing/regridding provided invalid results if
  input variables were available as float instead of double data.

* harp_product_get_derived_variable() no longer converts data to double if
  no data type was provided and data already had the right unit.

* Fixed issue where listing derivations for a specific variable would not show
  all possible conversions.

* Add derivation for cloud height from cloud base/top height.

* Added support for Dobson, Pandora and Sonde products in GEOMS format.

* Updates to ACE-FTS, GOME/GOME-2 L2, and S5P L2 product ingestions.

1.4 2018-09-28
~~~~~~~~~~~~~~
