@@ -531,6 +531,10 @@ incorrectly in further operations). It is primarilly meant to
 add/remove prefixes (such as surface/tropospheric/etc.) to allow
 the variable to be used in a more specific (with prefix) or
 generic (without prefix) way.
+If a product does not have a variable with the source name but
+already has a variable with the target name then the rename
+operation will do nothing (assuming that the target state is
+already satisfied).
 Example:</p>
 <blockquote class="last">
 <div><code class="docutils literal notranslate"><span class="pre">rename(surface_temperature,</span> <span class="pre">temperature)</span></code></div></blockquote>
